--- a/index.html
+++ b/index.html
@@ -748,10 +748,10 @@ GDP_part6 = summarise(group_by(GDP_part5,year),GDP=sum(GDP))
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="quote" id="slide-40" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-40" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
-    <p><q>接下來先從各類join開始說明</q></p>
+    <p>###接下來先從各類join開始說明</p>
 
 <p>先<code>建立資料集</code></p>
 
