--- a/index.html
+++ b/index.html
@@ -748,10 +748,10 @@ GDP_part6 = summarise(group_by(GDP_part5,year),GDP=sum(GDP))
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-40" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="quote" id="slide-40" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
-    <p>###接下來先從各類join開始說明</p>
+    <p><q>接下來先從各類join開始說明</q></p>
 
 <p>先<code>建立資料集</code></p>
 
@@ -759,16 +759,9 @@ GDP_part6 = summarise(group_by(GDP_part5,year),GDP=sum(GDP))
 y=data.frame(c1 = c(1,2,2,3,4,6,6),c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
 </code></pre>
 
-<div style='float:left;width:48%;'>
-<p>x
-<img src="./sources/figures/x.svg"></svg></p>
+<p>打入 <code>View(x)</code>與<code>View(y)</code>應該會看見
+<img src="./sources/figures/R_ETL_X.svg"></img></p>
 
-</div>
-  <div style='float:right;width:48%;'>
-<p>y
-<img src="./sources/figures/y.svg"></svg></p>
-
-</div>
   </article>
   <!-- Presenter Notes -->
 </slide>
