--- a/index.html
+++ b/index.html
@@ -754,8 +754,9 @@ GDP_part6 = summarise(group_by(GDP_part5,year),GDP=sum(GDP))
     <h2>join講解前資料準備</h2>
   </hgroup>
   <article data-timings="">
-    <p>###接下來先從各類join開始說明
-先<code>建立資料集</code></p>
+    <h3>接下來先從各類join開始說明</h3>
+
+<p>先<code>建立資料集</code></p>
 
 <pre><code>x=data.frame(c1 = c(1,1,2,3,4,5,5),c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
 y=data.frame(c1 = c(1,2,2,3,4,6,6),c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
