--- a/index.html
+++ b/index.html
@@ -764,8 +764,9 @@ y=data.frame(c1 = c(1,2,2,3,4,6,6),
             c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
 </code></pre>
 
-<p>打入 <code>View(x)</code>與<code>View(y)</code>應該會看見
-<img src="./resources/figures/R_ETL_x.svg"></img></p>
+<p>打入 <code>View(x)</code>與<code>View(y)</code>應該會看見</p>
+
+<p><img src="./resources/figures/R_ETL_x.svg" height="10%"></img></p>
 
   </article>
   <!-- Presenter Notes -->
