--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@ y=data.frame(c1 = c(1,2,2,3,4,6,6),
 ljyx = left_join(y,x,by=&quot;c1&quot;) #以Y為主
 </code></pre>
 
-<p><img src="./resources/figures/R_ETL_LJXY.svg" ></img></p>
+<p><img src="./resources/figures/R_ETL_LJXY.svg" style="height:200px"></img></p>
 
   </article>
   <!-- Presenter Notes -->
