--- a/index.html
+++ b/index.html
@@ -849,6 +849,15 @@ ljyx = left_join(y,x,by=&quot;c1&quot;) #以Y為主
 
 </div>
   <div style='float:right;width:48%;'>
+<h3>anti_join 取出非共有的鍵值</h3>
+
+<pre><code class="r">anti_join(x,y,by=&quot;c1&quot;)
+</code></pre>
+
+<pre><code>##   c1 c2
+## 1  5  F
+## 2  5  G
+</code></pre>
 
 </div>
   </article>
