--- a/index.html
+++ b/index.html
@@ -872,8 +872,7 @@ ljyx = left_join(y,x,by=&quot;c1&quot;) #以Y為主
   <!-- Presenter Notes -->
   <aside class="note" id="">
     <section>
-      <p>回憶:
-<img src="./resources/figures/R_ETL_x.svg" ></img></p>
+      <p><img src="./resources/figures/R_ETL_x.svg" style="height:400px" ></img></p>
 
 <h2>dplyr 介紹 - semi_join, full_join</h2>
 
