--- a/index.html
+++ b/index.html
@@ -949,15 +949,16 @@ ljyx = left_join(y,x,by=&quot;c1&quot;) #以Y為主
     
 <div class='row-fluid'>
   <div class='span6'>
-    
+    <p><img src="./resources/figures/R_ETL_TWOTABLES.svg" style="height:400px" ></img></p>
+
   </div>
   <div class='span6'>
     <div class="quiz quiz-single well new">
       <ol>
-<li>left_join(Cl_Info_part7,GDP_part5,by=data_dt)</li>
-<li>semi_join(Cl_Info_part7,GDP_part5,by=data_dt)</li>
-<li>left_join(GDP_part5,Cl_Info_part7,by=data_dt)</li>
-<li>semi_join(GDP_part5,Cl_Info_part7,by=data_dt)</li>
+<li>left_join Cl_Info_part7 擺左邊</li>
+<li>semi_join Cl_Info_part7 擺左邊</li>
+<li><em>left_join GDP_part5 擺左邊</em></li>
+<li><em>semi_join GDP_part5 擺左邊</em></li>
 <li>其他</li>
 </ol>
 
