--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@ ljyx = left_join(y,x,by=&quot;c1&quot;) #以Y為主
     <p>與<code>left_join</code>的差別在，只要對應不到的鍵值就不出現</p>
 
 <div style='float:left;width:48%;'>
-<h3><code>semi_join</code> 取出共有的鍵值,<code>x</code> 為主</h3>
+<h3><code>semi_join</code> 取出共有的鍵值,只留<code>x</code> 的欄位</h3>
 
 <pre><code class="r">semi_join(x,y,by=&quot;c1&quot;)
 </code></pre>
@@ -902,7 +902,7 @@ ljyx = left_join(y,x,by=&quot;c1&quot;) #以Y為主
 
 </div>
   <div style='float:right;width:48%;'>
-<h3><code>semi_join</code> 取出共有的鍵值,<code>y</code> 為主</h3>
+<h3><code>semi_join</code> 取出共有的鍵值,只留<code>y</code>的欄位</h3>
 
 <pre><code class="r">semi_join(y,x,by=&quot;c1&quot;)
 </code></pre>
@@ -955,10 +955,10 @@ ljyx = left_join(y,x,by=&quot;c1&quot;) #以Y為主
   <div class='span6'>
     <div class="quiz quiz-single well new">
       <ol>
-<li><em>left_join Cl_Info_part7</em></li>
-<li><em>semi_join Cl_Info_part7</em></li>
-<li>left_join GDP_part5</li>
-<li>semi_join GDP_part5</li>
+<li>left_join Cl_Info_part7</li>
+<li>semi_join Cl_Info_part7</li>
+<li><em>left_join GDP_part5</em></li>
+<li><em>semi_join GDP_part5</em></li>
 <li>其他</li>
 </ol>
 
@@ -968,7 +968,7 @@ ljyx = left_join(y,x,by=&quot;c1&quot;) #以Y為主
       <button class="quiz-clear btn btn-danger">Clear</button>
       
       <div class="quiz-explanation">
-  <p>因為Cl_info_part7所俱有的年份比較少，用這個當作主鍵是比較好的.</p>
+  <p>因為GDP_part5_所俱有的<code>時間點</code>較少，用這個當作主鍵是比較好的.</p>
 
 </div>
     </div>
@@ -984,10 +984,24 @@ ljyx = left_join(y,x,by=&quot;c1&quot;) #以Y為主
     <h2>資料整理完成!</h2>
   </hgroup>
   <article data-timings="">
-    <pre><code>mutate(Cl_info_part7,as)
-GDP_part7 = select(mutate(GDP_part6 , data_dt = as.POSIXct(paste(year,&#39;1&#39;,&#39;1&#39;,sep=&#39;-&#39;))),data_dt,GDP)
-INFO =left_join(Cl_info_part7,GDP_part7,by=&quot;data_dt&quot;,copy=TRUE)
+    <pre><code>GDP_part7 = select(mutate(GDP_part6 , 
+                   time = as.POSIXct(paste(year,&#39;1&#39;,&#39;1&#39;,sep=&#39;-&#39;))),time,GDP)
+t1 = left_join(GDP_part7,Cl_info_part7,by=&quot;time&quot;)
+t2 = filter(t1,is.na(mortage_total_bal)==FALSE)
 </code></pre>
+
+<p>看一下資料 <code>View(t2)</code></p>
+
+<p><img src="./resources/figures/R_ETL_t2.svg" style="height:200px" ></img></p>
+
+<p>-- &amp;twocol w1:20% w2:80%
+##接下來我們應該做</p>
+
+<ol>
+<li>畫圖</li>
+<li>解釋</li>
+<li>做報告!</li>
+</ol>
 
   </article>
   <!-- Presenter Notes -->
